HDFS-2030. Improve usability of namenode -upgrade command. Contributed by Bharath Mundlapudi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1134138 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -510,6 +510,9 @@ Trunk (unreleased changes)
     HDFS-941. The DFS client should cache and reuse open sockets to datanodes
     while performing reads. (bc Wong and Todd Lipcon via todd)
 
+    HDFS-2030. Improve usability of namenode -upgrade command.
+    (Bharath Mundlapudi via suresh)
+
   BUG FIXES
 
     HDFS-1449. Fix test failures - ExtendedBlock must return 
