HDFS-2056. Update fetchdt usage. Contributed by Tanping Wang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1134170 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -513,6 +513,8 @@ Trunk (unreleased changes)
     HDFS-2030. Improve usability of namenode -upgrade command.
     (Bharath Mundlapudi via suresh)
 
+    HDFS-2056. Update fetchdt usage. (Tanping Wang via jitendra)
+
   BUG FIXES
 
     HDFS-1449. Fix test failures - ExtendedBlock must return 
