MAPREDUCE-2581. Spelling errors in log messages. Contributed by Tim Sell
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1134180 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -283,6 +283,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2573. Fix new findbugs warning introduced by MAPREDUCE-2494.
     (Robert Joseph Evans via todd)
 
+    MAPREDUCE-2581. Spelling errors in log messages. (Tim Sell via eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
