HDFS-1409. BackupNode registration throwing  UnsupportedActionException("register") instead of "journal". Contributed by Ching-Shen Chen.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1134444 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -973,6 +973,10 @@ Release 0.22.0 - Unreleased
     HDFS-1954. Improved corrupt files warning on NameNode web UI.
     (Patrick Hunt via shv)
 
+    HDFS-1409. BackupNode registration throwing  
+    UnsupportedActionException("register") instead of "journal".
+    (Ching-Shen Chen via shv)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
