MAPREDUCE-2430. Remove mrunit contrib. Contributed by Nigel Daley
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1134850 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2455. Remove deprecated JobTracker.State in favour of
     JobTrackerStatus. (tomwhite)
 
+    MAPREDUCE-2430. Remove mrunit contrib. (nigel via eli)
+
   NEW FEATURES
 
     MAPREDUCE-2543. [Gridmix] High-Ram feature emulation in Gridmix. (amarrk)
