HDFS-2063. libhdfs test is broken. Contributed by Eric Yang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1134856 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -724,6 +724,8 @@ Trunk (unreleased changes)
     HDFS-2041. OP_CONCAT_DELETE doesn't properly restore modification time
     of the concatenated file when edit logs are replayed. (todd)
 
+    HDFS-2063. libhdfs test is broken. (Eric Yang via eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
