HDFS-2067. Bump DATA_TRANSFER_VERSION constant in trunk after introduction of protocol buffers in the protocol. Contributd by Tsz Wo (Nicholas), SZE.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1134859 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -726,6 +726,9 @@ Trunk (unreleased changes)
 
     HDFS-2063. libhdfs test is broken. (Eric Yang via eli)
 
+    HDFS-2067. Bump DATA_TRANSFER_VERSION constant in trunk after introduction
+    of protocol buffers in the protocol. (szetszwo via todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
