HDFS-2069. Incorrect default trash interval value in the docs. Contributed by Harsh J Chouraria
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1134955 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -732,6 +732,9 @@ Trunk (unreleased changes)
     HDFS-2067. Bump DATA_TRANSFER_VERSION constant in trunk after introduction
     of protocol buffers in the protocol. (szetszwo via todd)
 
+    HDFS-2069. Incorrect default trash interval value in the docs.
+    (Harsh J Chouraria via eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
