MAPREDUCE-3147. Handle leaf queues with the same name properly. (Ravi Prakash via mahadev) - Merging r1211243 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1211247 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -200,6 +200,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3496. Fixed client to print queue acls in consistent order.
     (Jonathan Eagles via acmurthy) 
 
+    MAPREDUCE-3147. Handle leaf queues with the same name properly.
+    (Ravi Prakash via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
