HADOOP-7870. svn merge -c 1212084 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1212086 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -71,7 +71,8 @@ Release 0.23.1 - Unreleased
 
    HADOOP-7887. KerberosAuthenticatorHandler is not setting KerberosName 
    name rules from configuration. (tucu)
-
+   HADOOP-7870. fix SequenceFile#createWriter with boolean
+   createParent arg to respect createParent. (Jon Hsieh via eli)
 
 Release 0.23.0 - 2011-11-01 
 
