--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -206,6 +206,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3327. RM web ui scheduler link doesn't show correct max value 
     for queues (Anupam Seth via mahadev)
 
+    MAPREDUCE-3513. Capacity Scheduler web UI has a spelling mistake for Memory.
+    (chackaravarthy via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
