svn merge -c 1212299 from trunk for HDFS-2594.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1212301 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -9,6 +9,9 @@ Release 0.23.1 - UNRELEASED
     HDFS-2316. [umbrella] WebHDFS: a complete FileSystem implementation for 
     accessing HDFS over HTTP (szetszwo)
 
+    HDFS-2594. Support getDelegationTokens and createSymlink in WebHDFS.
+    (szetszwo)
+
   IMPROVEMENTS
     HDFS-2560. Refactor BPOfferService to be a static inner class (todd)
 
