MAPREDUCE-3519. Fixed a deadlock in NodeManager LocalDirectories's handling service. Contributed by Ravi Gummadi. svn merge -c 1212680 --ignore-ancestry ../../trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1212681 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -209,6 +209,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3513. Capacity Scheduler web UI has a spelling mistake for Memory.
     (chackaravarthy via mahadev)
 
+    MAPREDUCE-3519. Fixed a deadlock in NodeManager LocalDirectories's handling
+    service. (Ravi Gummadi via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
