Preparing for release 0.22.0
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1213119 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -1419,7 +1419,19 @@ Release 0.23.0 - 2011-11-01
     HDFS-2445. Ensure failed tests exit with proper error code. (Jonathan 
     Eagles via acmurthy)
 
-Release 0.22.0 - Unreleased
+Release 0.22.1 - Unreleased
+
+  INCOMPATIBLE CHANGES
+
+  NEW FEATURES
+
+  IMPROVEMENTS
+
+  OPTIMIZATIONS
+
+  BUG FIXES
+
+Release 0.22.0 - 2011-11-29
 
   INCOMPATIBLE CHANGES
 
