HADOOP-7878  Regression: HADOOP-7777 switch changes break HDFS tests when the isSingleSwitch() predicate is used
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1213264 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -80,6 +80,9 @@ Release 0.23.1 - Unreleased
 
     HADOOP-7898. Fix javadoc warnings in AuthenticationToken.java. (suresh)
 
+    HADOOP-7878  Regression: HADOOP-7777 switch changes break HDFS tests when the
+    isSingleSwitch() predicate is used. (stevel)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
