HDFS-2653. svn merge -c 1213586 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1213589 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -88,6 +88,9 @@ Release 0.23.1 - UNRELEASED
 
     HDFS-2614. hadoop dist tarball is missing hdfs headers. (tucu)
  
+    HDFS-2653. DFSClient should cache whether addrs are non-local when
+    short-circuiting is enabled. (eli)
+    
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
