--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -86,6 +86,9 @@ Release 0.23.1 - Unreleased
     HADOOP-7878  Regression: HADOOP-7777 switch changes break HDFS tests when the
     isSingleSwitch() predicate is used. (stevel)
 
+   HADOOP-7914. Remove the duplicated declaration of hadoop-hdfs test-jar in
+   hadoop-project/pom.xml.  (szetszwo)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
