MAPREDUCE-3251. Network ACLs can prevent some clients to talk to MR ApplicationMaster. (Anupam Seth via mahadev) - Merging r1214662 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1214664 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -11,6 +11,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-2863. Support web services for YARN and MR components. (Thomas
     Graves via vinodkv)
 
+    MAPREDUCE-3251. Network ACLs can prevent some clients to talk to MR ApplicationMaster.
+    (Anupam Seth via mahadev)
+
   IMPROVEMENTS
     MAPREDUCE-3375. [Gridmix] Memory Emulation system tests.
                     (Vinay Thota via amarrk)
