MAPREDUCE-3560. TestRMNodeTransitions is failing on trunk. (Siddharth Seth via mahadev) - Merging r1214668 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1214669 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -260,6 +260,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3531. Fixed a race in ContainerTokenSecretManager. (Robert Joseph
     Evans via sseth)
 
+    MAPREDUCE-3560. TestRMNodeTransitions is failing on trunk. 
+    (Siddharth Seth via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
