MAPREDUCE-3487. Fixed JobHistory web-UI to display links to single task's counters' page. Contributed by Jason Lowe. svn merge -c 1215016 --ignore-ancestry ../../trunk/
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1215017 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -263,6 +263,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3560. TestRMNodeTransitions is failing on trunk. 
     (Siddharth Seth via mahadev)
 
+    MAPREDUCE-3487. Fixed JobHistory web-UI to display links to single task's
+    counters' page. (Jason Lowe via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
