MAPREDUCE-3564. Fixed failures in TestStagingCleanup and TestJobEndNotifier tests. Contributed by Siddharth Seth. svn merge -c 1215022 --ignore-ancestry ../../trunk/
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1215023 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -266,6 +266,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3487. Fixed JobHistory web-UI to display links to single task's
     counters' page. (Jason Lowe via vinodkv)
 
+    MAPREDUCE-3564. Fixed failures in TestStagingCleanup and TestJobEndNotifier
+    tests. (Siddharth Seth via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
