--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -272,6 +272,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3422. Counter display names are not being picked up. (Jonathan
     Eagles via sseth)
 
+    MAPREDUCE-3366. Mapreduce component should use consistent directory structure 
+    layout as HDFS/common (Eric Yang via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
