--- a/hadoop-mapreduce-project/INSTALL
+++ b/hadoop-mapreduce-project/INSTALL
@@ -55,11 +55,11 @@ Step 8) Modify mapred-site.xml to use yarn framework
 
 Step 9) cd $YARN_HOME
 
-Step 10) bin/yarn-daemon.sh start resourcemanager
+Step 10) sbin/yarn-daemon.sh start resourcemanager
 
-Step 11) bin/yarn-daemon.sh start nodemanager
+Step 11) sbin/yarn-daemon.sh start nodemanager
 
-Step 12) bin/yarn-daemon.sh start historyserver
+Step 12) sbin/yarn-daemon.sh start historyserver
 
 Step 13) You are all set, an example on how to run a mapreduce job is:
 cd $HADOOP_MAPRED_HOME
