svn merge -c 1221106 from trunk for HDFS-2706.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1221107 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -112,6 +112,9 @@ Release 0.23.1 - UNRELEASED
 
     HDFS-2658. HttpFS introduced 70 javadoc warnings. (tucu)
 
+    HDFS-2706. Use configuration for blockInvalidateLimit if it is set.
+    (szetszwo)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
