MAPREDUCE-3568. Optimized Job's progress calculations in MR AM. (vinodkv) svn merge -c 1224995 --ignore-ancestry ../../trunk/
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1224996 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -96,6 +96,8 @@ Release 0.23.1 - Unreleased
     immediately after downloading a resource instead of always waiting for a
     second. (Siddarth Seth via vinodkv)
 
+    MAPREDUCE-3568. Optimized Job's progress calculations in MR AM. (vinodkv)
+
   BUG FIXES
     MAPREDUCE-2950. [Rumen] Fixed TestUserResolve. (Ravi Gummadi via amarrk)
 
