--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -1,5 +1,9 @@
 Hadoop Change Log
 
+Release 0.23-PB - Unreleased
+
+  HADOOP-7524 Change RPC to allow multiple protocols including multuple versions of the same protocol (sanjay Radia)
+
 Release 0.23.1 - Unreleased
 
   INCOMPATIBLE CHANGES
